feat: return status 422 on bad data, openapi changes
